--- a/report-bib/biblio.bib
+++ b/report-bib/biblio.bib
@@ -20,3 +20,9 @@ title = {A medium paper},
 journal = {Some medium papers},
 year = 1337,
 }
+
+@string{ase = {{IEEE--ACM} International Conference on Automated Software 
+	Engineering (ASE)}}
+
+@string{asplos = {International Conference on Architectural Support for
+    Programming Languages and Operating Systems (ASPLOS)}}
